k8s/apps/_retired/amq-media-proxy/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment

spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: app
          image: ghcr.io/slashnephy/amq-media-proxy:master@sha256:1442f98f814cbbf798d102f7c218e7e99eb9aba19c42741a80427b0c70949079
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: cache
              mountPath: /app/.cache
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
      #        - name: batch
      #          image: ghcr.io/slashnephy/amq-media-proxy:master@sha256:7ed52d914a8b0dd4fde10c359bd00fb6ec815857c6e3530d7c4585bc61eff8be
      #          args:
      #            - ./batch-download
      #          env:
      #            - name: QUESTIONS_JSON_PATH
      #              value: /app/questions.json
      #          volumeMounts:
      #            - name: cache
      #              mountPath: /app/.cache
      #            - name: questions-json
      #              mountPath: /app/questions.json
      #          securityContext:
      #            allowPrivilegeEscalation: false
      volumes:
        - name: cache
          hostPath:
            path: /mnt/pool/amq
            type: DirectoryOrCreate
        - name: questions-json
          hostPath:
            path: /mnt/local/amq-media-proxy/questions.json
            type: File
      restartPolicy: Always
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      terminationGracePeriodSeconds: 180
